# vibe_keyboard

./: .clang-format  .gitignore  .pre-commit-config.yaml  CLAUDE.md  platformio.ini  pyproject.toml
.claude/: hooks.json  settings.local.json
.github/workflows/: claude-code-review.yml  claude.yml  platformio.yml
src/: main.cpp
