[project]
name = "vibe-keyboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "platformio>=6.1.18",
    "pre-commit>=4.2.0",
    "taskipy>=1.13.0",
]

[tool.taskipy.tasks]
build = "pio run"
upload = "pio run -t upload"
clean = "pio run -t clean"
test = "pio test"
monitor = "pio device monitor"
build-upload = "pio run && pio run -t upload"
